# langflow_integration

./: README.md  pyproject.toml
langflow_integration/: hooks.py  modules.txt
langflow_integration/api/: langflow_client.py
langflow_integration/langflow_integration/api/: langflow_client.py
langflow_integration/public/js/: customer.js  job_applicant.js  langflow_global.js
